--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,2 @@
-build
-*xcodeproj/*mode*
-*xcodeproj/*pbxuser
-*xcodeproj/*per*
-*xcodeproj/project.xcworkspace
-*xcodeproj/xcuserdata
-*tmproj
-.DS_Store
-profile
-*.pbxuser
-*.mode1v3
-External/GHUnit/*
-.svn
+*.DS_Store
+xcuserdata
